# routerust

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml
.circleci/: config.yml
ansible/: container.yml
cert/: ca-key.pem  client-key.pem  gen.sh  server-key.pem
data/: route_guide_db.json
migrations/2020-05-17-164342_create_brands/: down.sql  up.sql
migrations/2020-05-17-164349_create_engines/: down.sql  up.sql
migrations/2020-05-17-164553_create_cars/: down.sql  up.sql
migrations/2020-05-31-143559_create_users/: up.sql
migrations/2020-05-31-143626_create_articles/: down.sql  up.sql
migrations/2020-05-31-143651_create_favorites/: down.sql  up.sql
migrations/2020-05-31-143721_create_followers/: down.sql  up.sql
migrations/2020-05-31-143750_create_comments/: up.sql
migrations/2020-06-01-185212_create_routes/: up.sql
proto/: car.proto  route.proto
src/: auth.rs  client.rs  db_connection.rs  errors.rs  main.rs  schema.rs  server.rs
src/db/: Cargo.toml
src/db/src/: connection.rs  models.rs  repository.rs  schema.rs
src/db/src/queries/: mod.rs  routes.rs
src/domain/: Cargo.toml
src/domain/tests/: domain_articles.rs
src/domain/tests/helpers/: generate.rs  mod.rs
src/services/: car_service.rs  mod.rs
terraform/: alb.tf  main.tf  network.tf  security.tf  variables.tf
