[package]
name = "routerust"
version = "0.1.0"
authors = ["&bigbang <thebigbangfirst@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { version = "0.2", features = ["transport", "tls"] }
prost = "0.6"
futures = "0.3"
futures-core = "0.3"
futures-util = "0.3"
tokio = { version = "0.2", features = ["macros", "sync", "stream", "time"] }

async-stream = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7"

diesel = { version = "1.0.0", features = ["postgres", "r2d2"] }
dotenv = "0.9.0"

[build-dependencies]
tonic-build = "0.2"

[[bin]]
name = "routeguide-server"
path = "src/server.rs"

[[bin]]
name = "routeguide-client"
path = "src/client.rs"
