[package]
name = "routerust"
version = "0.1.0"
authors = ["&bigbang <thebigbangfirst@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { version = "0.2", features = ["transport"] }
prost = "0.6"
prost-types = "0.6"
futures = "0.3"
futures-core = "0.3"
futures-util = "0.3"
tokio = { version = "0.2", features = ["macros", "sync", "stream", "time"] }

async-stream = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.104"
serde_json = "1.0"
rand = "0.7"

chrono = "0.4.10"
diesel = { version = "1.4.3", features = ["chrono", "postgres", "r2d2", "uuidv07", "serde_json"] }
dotenv = "0.15.0"
env_logger = "0.7.1"

db = { package = "routeguide-db", path = "./src/db" }
domain = { package = "routeguide-domain", path = "./src/domain" }

[build-dependencies]
tonic-build = "0.2"

[[bin]]
name = "routeguide-server"
path = "src/server.rs"

[[bin]]
name = "routeguide-client"
path = "src/client.rs"
